@@ -1,3 +1,10 @@
+2005-01-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* python/lilylib.py (make_ps_images): don't do showpage for
+	multi-page documents.
+	
+	* VERSION (MY_PATCH_LEVEL): release 2.5.8
+
 2005-01-16  Graham Percival  <gperlist@shaw.ca>
 
 	* Documentation/user/lilypond.tely: changed order of appendices;
